Fixed IE alignment issues and checked in IE-v11..

--- a/HexiCloud/public_html/css/hc-chooseRole.css
+++ b/HexiCloud/public_html/css/hc-chooseRole.css
@@ -298,10 +298,10 @@ hr{
     height: auto;
 }
 
-.follow-steps-container {
+/*.follow-steps-container {
     left: 8.333333333333332%;
     position: relative;
-}
+}*/
 
 .chooseRoleContainer .addusers-img-container 
 {
